# Spicy-Snakes-and-Ladders

./: .gitignore  README.md  Swc_Function.c  Swc_IO_Hardware_Button.c  Swc_IO_Hardware_Led.c  Swc_Input.c  board.py  colors.py  dice.py  game.py  game_publisher.py  main.py  messages.py  mr305.py  players.py  square.py
C++/: board_controller.cpp  board_controller.hpp  player.cpp  player.hpp
C++/log/: latest_build
C++/snakes_and_ladders/: CMakeLists.txt  package.xml
install/: local_setup.sh  setup.sh
install/custom_msgs/include/custom_msgs/custom_msgs/msg/: game_state_msg.hpp
install/custom_msgs/include/custom_msgs/custom_msgs/msg/detail/: game_state_msg__functions.c  game_state_msg__functions.h  game_state_msg__rosidl_typesupport_fastrtps_c.h  game_state_msg__rosidl_typesupport_fastrtps_cpp.hpp  game_state_msg__rosidl_typesupport_introspection_cpp.hpp  game_state_msg__traits.hpp  game_state_msg__type_support.cpp  game_state_msg__type_support.h
install/custom_msgs/include/custom_msgs/custom_msgs/srv/: player_move.h
install/custom_msgs/include/custom_msgs/custom_msgs/srv/detail/: player_move__functions.h  player_move__rosidl_typesupport_fastrtps_c.h  player_move__rosidl_typesupport_fastrtps_cpp.hpp  player_move__traits.hpp  player_move__type_support.h
install/custom_msgs/local/lib/python3.10/dist-packages/custom_msgs/msg/: __init__.py
install/custom_msgs/local/lib/python3.10/dist-packages/custom_msgs/srv/: __init__.py
install/custom_msgs/share/custom_msgs/: package.sh  package.xml
install/custom_msgs/share/custom_msgs/srv/: PlayerMove.idl  PlayerMove_Request.msg
install/game/share/game/: package.bash  package.sh
install/snakes_and_ladders/share/snakes_and_ladders/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtlesim/lib/turtlesim/: draw_square  mimic  turtle_teleop_key
install/turtlesim/share/turtlesim/: package.sh
log/: latest_build
snakes_and_ladders/: CMakeLists.txt  package.xml
snakes_and_ladders/msg/: game_state_msg.msg
src/custom_msgs/: CMakeLists.txt
src/custom_msgs/srv/: PlayerMove.srv
src/game/: .package.xml.swo  CMakeLists.txt  package.xml
src/game/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/game/install/game/share/game/: package.sh
src/game/log/: latest_build
src/game/src/: board_controller.cpp  board_controller.cpp.save  board_controller.hpp  player.cpp  player.hpp
workspace/: build_game.sh
workspace/install/: local_setup.sh  setup.sh
workspace/install/game/include/game/game/msg/detail/: game_state_msg__builder.hpp  game_state_msg__functions.c  game_state_msg__rosidl_typesupport_introspection_cpp.hpp  game_state_msg__struct.hpp  game_state_msg__type_support.c
workspace/install/game/lib/game/: controller_publisher
workspace/install/game/local/lib/python3.10/dist-packages/game/msg/: _game_state_msg.py  _game_state_msg_s.c
workspace/install/game/share/ament_index/resource_index/parent_prefix_path/: game
workspace/install/game/share/game/: package.dsv  package.ps1  package.sh  package.zsh
workspace/install/game/share/game/cmake/: export_game__rosidl_generator_cExport.cmake  export_game__rosidl_typesupport_fastrtps_cppExport.cmake  game__rosidl_typesupport_introspection_cExport.cmake
workspace/log/: latest_build
workspace/src/game/: CMakeLists.txt
workspace/src/game/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
workspace/src/game/install/game/share/game/: package.dsv  package.ps1  package.sh
workspace/src/game/log/: latest_build
workspace/src/game/msg/: GameStateMsg.msg
workspace/src/game/src/: controller_publisher.cpp
